3.0/_sources/reference/generated/pydicom.dataset.Dataset.rst.txt
pydicom.dataset.Dataset
=======================

.. currentmodule:: pydicom.dataset

.. autoclass:: Dataset

   
   .. automethod:: __init__

   
   .. rubric:: Methods

   .. autosummary::
   
      ~Dataset.__init__
      ~Dataset.add
      ~Dataset.add_new
      ~Dataset.add_new_private
      ~Dataset.clear
      ~Dataset.compress
      ~Dataset.convert_pixel_data
      ~Dataset.copy
      ~Dataset.data_element
      ~Dataset.decode
      ~Dataset.decompress
      ~Dataset.dir
      ~Dataset.elements
      ~Dataset.ensure_file_meta
      ~Dataset.formatted_lines
      ~Dataset.from_json
      ~Dataset.get
      ~Dataset.get_item
      ~Dataset.get_private_item
      ~Dataset.group_dataset
      ~Dataset.items
      ~Dataset.iterall
      ~Dataset.keys
      ~Dataset.overlay_array
      ~Dataset.pixel_array_options
      ~Dataset.pop
      ~Dataset.popitem
      ~Dataset.private_block
      ~Dataset.private_creators
      ~Dataset.remove_private_tags
      ~Dataset.save_as
      ~Dataset.set_original_encoding
      ~Dataset.set_pixel_data
      ~Dataset.setdefault
      ~Dataset.to_json
      ~Dataset.to_json_dict
      ~Dataset.top
      ~Dataset.trait_names
      ~Dataset.update
      ~Dataset.update_raw_element
      ~Dataset.values
      ~Dataset.walk
      ~Dataset.waveform_array
   
   

   
   
   .. rubric:: Attributes

   .. autosummary::
   
      ~Dataset.default_element_format
      ~Dataset.default_sequence_element_format
      ~Dataset.indent_chars
      ~Dataset.is_implicit_VR
      ~Dataset.is_little_endian
      ~Dataset.is_original_encoding
      ~Dataset.original_character_set
      ~Dataset.original_encoding
      ~Dataset.pixel_array
      ~Dataset.read_encoding
      ~Dataset.read_implicit_vr
      ~Dataset.read_little_endian
   
   